# prueba

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
app/: dashboard.py  stats.py
gamescout/: __init__.py  dashboard.py  db.py  main.py  models.py  repository.py  scraper.py
src/: datos.py  models.py  prueba.ipynb  scrapping.py
tests/: test_models.py  test_repository.py
